--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
         <h1>Automate Your Sales Funnel in Minutes</h1>
         <p>AI-powered funnel builder designed specifically for marketing consultants. Create high-converting landing pages without coding.</p>
         <button class="cta-button" onclick="showDemo()">Start Free Trial →</button>
+        <img src="https://via.placeholder.com/800x400" alt="Funnel Builder Preview" style="max-width: 100%; margin-top: 2rem;">
     </section>
 
     <div class="features">
